fixing titles styles on mobile size

--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ p {
     }
 
     h2 {
-        font-size: 1.3rem;
+        font-size: 1.7rem;
     }
 
     .btn {
